migrate to SciML

--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -44,18 +44,12 @@
    "outputs": [],
    "source": [
     "# uncomment this line to install ffsas\n",
-    "# !pip install https://github.com/kuangdai/ffsas/archive/refs/heads/master.zip\n",
+    "# !pip install https://github.com/stfc-sciml/ffsas/archive/refs/heads/master.zip\n",
     "\n",
     "# ffsas\n",
-    "from ffsas import torch_dtype\n",
+    "import torch\n",
     "from ffsas.models import Ellipsoid\n",
     "from ffsas.system import SASGreensSystem\n",
-    "\n",
-    "# torch\n",
-    "import torch\n",
-    "\n",
-    "# by default torch will use float32, but we need float64\n",
-    "torch.set_default_dtype(torch_dtype)\n",
     "\n",
     "# set device to 'cuda' if you have a GPU\n",
     "device = 'cpu'"
@@ -126,8 +120,8 @@
     "par_dict = {\n",
     "    'rp': torch.linspace(200., 600., 18),\n",
     "    're': torch.linspace(50., 90., 17),\n",
-    "    'theta': torch.deg2rad(torch.linspace(5., 60., 16)),\n",
-    "    'phi': torch.deg2rad(torch.linspace(150., 240., 15))\n",
+    "    'theta': torch.linspace(5., 60., 16),\n",
+    "    'phi': torch.linspace(150., 240., 15)\n",
     "}\n",
     "\n",
     "# parameter distributions\n",
@@ -154,7 +148,11 @@
     "ax[1, 0].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 1].set_ylabel(r'Weights, $w$')\n",
     "plt.savefig(output_dir / 'true_weights.png', bbox_inches='tight', facecolor='w')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# degree to radian\n",
+    "par_dict['theta'] = torch.deg2rad(par_dict['theta'])\n",
+    "par_dict['phi'] = torch.deg2rad(par_dict['phi'])"
    ]
   },
   {
@@ -186,13 +184,14 @@
     "drho = 1.\n",
     "\n",
     "# comupute the Green's function and volume\n",
-    "G, V = Ellipsoid.compute_G_V([qx, qy],  par_dict, {'drho': drho}, batch_size=16, device=device)\n",
+    "G = Ellipsoid.compute_G_mini_batch([qx, qy],  par_dict, {'drho': drho}, batch_size=8, device=device)\n",
     "\n",
     "# define the G-based SAS system\n",
     "g_sys = SASGreensSystem(G, Ellipsoid.get_par_keys_G(), batch_size=8, device=device, \n",
     "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
     "\n",
     "# true xi\n",
+    "V = Ellipsoid.compute_V(par_dict, None)\n",
     "V_ave = torch.tensordot(torch.tensordot(V, w_true_dict['re'], dims=1), w_true_dict['rp'], dims=1)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
@@ -300,7 +299,7 @@
     "        ax[ikey].set_xlim(par_dict[key].min(), par_dict[key].max())\n",
     "        ax[ikey].set_xticks([])\n",
     "    ax[0].set_ylabel(f'iter={saved_res_dict[\"nit\"]}')\n",
-    "    ax[2].legend()\n",
+    "    ax[2].legend(loc='upper right')\n",
     "    plt.savefig(output_dir / f'iterations/{i}.png', bbox_inches='tight', facecolor='w')\n",
     "    plt.show()"
    ]
