--- a/examples/sphere.ipynb
+++ b/examples/sphere.ipynb
@@ -44,19 +44,15 @@
    "outputs": [],
    "source": [
     "# uncomment this line to install ffsas\n",
-    "# !pip install https://github.com/kuangdai/ffsas/archive/refs/heads/master.zip\n",
+    "# !pip install https://github.com/stfc-sciml/ffsas/archive/refs/heads/master.zip\n",
     "\n",
     "# ffsas\n",
-    "from ffsas import torch_dtype\n",
+    "import torch\n",
     "from ffsas.models import Sphere\n",
     "from ffsas.system import SASGreensSystem\n",
     "\n",
-    "# torch and math\n",
-    "import torch\n",
-    "from scipy import interpolate\n",
-    "\n",
-    "# by default torch will use float32, but we need float64\n",
-    "torch.set_default_dtype(torch_dtype)"
+    "# math tools\n",
+    "from scipy import interpolate"
    ]
   },
   {
@@ -167,9 +163,10 @@
     "drho = 25.\n",
     "\n",
     "# comupute the Green's function and volume\n",
-    "G, V = Sphere.compute_G_V([q], {'r': r}, {'drho': drho})\n",
+    "G = Sphere.compute_G_mini_batch([q], {'r': r}, {'drho': drho})\n",
     "\n",
     "# compute the ground truth of xi\n",
+    "V = Sphere.compute_V({'r': r}, None)\n",
     "V_ave = torch.dot(V, w_true)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
@@ -248,7 +245,7 @@
     "    r_reso = torch.linspace(r[0], r[-1], reso)\n",
     "    \n",
     "    # recompute G\n",
-    "    G_reso, V_reso = Sphere.compute_G_V([q], {'r': r_reso}, {'drho': drho})\n",
+    "    G_reso = Sphere.compute_G_mini_batch([q], {'r': r_reso}, {'drho': drho}, log_screen=False)\n",
     "    \n",
     "    # define the system\n",
     "    g_sys_reso = SASGreensSystem(G_reso, par_keys=Sphere.get_par_keys_G(), \n",
@@ -265,7 +262,6 @@
     "    sens_w_reso = result_dict['sens_w_dict']['r']\n",
     "    \n",
     "    # compute scale \n",
-    "    V_ave = torch.dot(V, w_true)\n",
     "    scale = result_dict['xi'] * V_ave / 1e-4\n",
     "\n",
     "    # upsample w to high resolution so we can plot them together\n",
