--- a/examples/sphere_PS3_data.ipynb
+++ b/examples/sphere_PS3_data.ipynb
@@ -44,22 +44,19 @@
    "outputs": [],
    "source": [
     "# uncomment this line to install ffsas\n",
-    "# !pip install https://github.com/kuangdai/ffsas/archive/refs/heads/master.zip\n",
+    "# !pip install https://github.com/stfc-sciml/ffsas/archive/refs/heads/master.zip\n",
     "\n",
     "# ffsas\n",
-    "from ffsas import torch_dtype\n",
+    "import torch\n",
+    "import ffsas\n",
     "from ffsas.models import Sphere\n",
     "from ffsas.system import SASGreensSystem\n",
     "\n",
-    "# torch and math\n",
-    "import torch\n",
+    "# math tools\n",
     "from scipy import interpolate\n",
     "\n",
     "# numpy for reading data\n",
-    "import numpy as np\n",
-    "\n",
-    "# by default torch will use float32, but we need float64\n",
-    "torch.set_default_dtype(torch_dtype)"
+    "import numpy as np"
    ]
   },
   {
@@ -84,13 +81,13 @@
     "data = np.loadtxt(fname)\n",
     "\n",
     "# q vector\n",
-    "q = torch.tensor(data[:, 0])\n",
+    "q = torch.tensor(data[:, 0], dtype=ffsas.torch_dtype)\n",
     "\n",
     "# intensity mean\n",
-    "mu = torch.tensor(data[:, 1])\n",
+    "mu = torch.tensor(data[:, 1], dtype=ffsas.torch_dtype)\n",
     "\n",
     "# intensity stddev\n",
-    "sigma = torch.tensor(data[:, 2])"
+    "sigma = torch.tensor(data[:, 2], dtype=ffsas.torch_dtype)"
    ]
   },
   {
@@ -114,7 +111,7 @@
     "r = torch.linspace(350, 850, 500)\n",
     "\n",
     "# compute the Green's tensor\n",
-    "G, V = Sphere.compute_G_V([q], {'r': r}, {'drho': 1.})\n",
+    "G = Sphere.compute_G_mini_batch([q], {'r': r}, {'drho': 1.})\n",
     "\n",
     "# build G-system\n",
     "g_sys = SASGreensSystem(G, Sphere.get_par_keys_G(), log_file=output_dir / 'sphere_PS3_data.log')\n",
