--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -44,23 +44,24 @@
    "outputs": [],
    "source": [
     "# uncomment this line to install ffsas\n",
-    "# !pip install https://github.com/kuangdai/ffsas/archive/refs/heads/master.zip\n",
+    "# !pip install https://github.com/stfc-sciml/ffsas/archive/refs/heads/master.zip\n",
     "\n",
     "# ffsas\n",
-    "from ffsas import torch_dtype\n",
+    "import torch\n",
+    "import ffsas\n",
+    "# in this example, we use float32 as the data type for torch tensors\n",
+    "# this must be called before importing from ffsas.models and ffsas.system\n",
+    "ffsas.set_torch_dtype(torch.float32)\n",
+    "\n",
     "from ffsas.models import SASModel\n",
     "from ffsas.system import SASGreensSystem\n",
     "\n",
-    "# torch and math\n",
-    "import torch\n",
-    "import math\n",
-    "from scipy.special import j1\n",
-    "\n",
-    "# by default torch will use float32, but we need float64\n",
-    "torch.set_default_dtype(torch_dtype)\n",
-    "\n",
     "# set device to 'cuda' if you have a GPU\n",
-    "device = 'cpu'"
+    "device = 'cpu'\n",
+    "\n",
+    "# math tools\n",
+    "import math\n",
+    "from scipy.special import j1"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "        sin_qc_l = torch.nan_to_num(2. * torch.sin(qc_l) / qc_l,\n",
     "                                    nan=1., posinf=1., neginf=1.)\n",
     "        # NOTE: scipy.special.j1() must be called on cpu\n",
-    "        j1_qa_r = torch.tensor(j1(qa_r.to('cpu').numpy())).to(qa_r.device)\n",
+    "        j1_qa_r = torch.tensor(j1(qa_r.to('cpu').numpy()), device=qa_r.device)\n",
     "        j1_qa_r = torch.nan_to_num(j1_qa_r / qa_r, nan=1., posinf=1., neginf=1.)\n",
     "        # shape factor\n",
     "        shape_factor = sin_qc_l[:, :, :, None, :, :] * j1_qa_r[:, :, None, :, :, :]\n",
@@ -234,8 +235,8 @@
     "par_dict = {\n",
     "    'l': torch.linspace(200., 600., 18),\n",
     "    'r': torch.linspace(50., 90., 17),\n",
-    "    'theta': torch.deg2rad(torch.linspace(5., 60., 16)),\n",
-    "    'phi': torch.deg2rad(torch.linspace(150., 240., 15))\n",
+    "    'theta': torch.linspace(5., 60., 16),\n",
+    "    'phi': torch.linspace(150., 240., 15)\n",
     "}\n",
     "\n",
     "# parameter distributions\n",
@@ -262,7 +263,11 @@
     "ax[1, 0].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 1].set_ylabel(r'Weights, $w$')\n",
     "plt.savefig(output_dir / 'true_weights.png', bbox_inches='tight', facecolor='w')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# degree to radian\n",
+    "par_dict['theta'] = torch.deg2rad(par_dict['theta'])\n",
+    "par_dict['phi'] = torch.deg2rad(par_dict['phi'])"
    ]
   },
   {
@@ -294,13 +299,14 @@
     "drho = 1.\n",
     "\n",
     "# comupute the Green's function and volume\n",
-    "G, V = Cylinder.compute_G_V([qx, qy],  par_dict, {'drho': drho}, batch_size=16, device=device)\n",
+    "G = Cylinder.compute_G_mini_batch([qx, qy],  par_dict, {'drho': drho}, batch_size=8, device=device)\n",
     "\n",
     "# define the G-based SAS system\n",
     "g_sys = SASGreensSystem(G, Cylinder.get_par_keys_G(), batch_size=8, device=device, \n",
     "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
     "\n",
     "# true xi\n",
+    "V = Cylinder.compute_V(par_dict, None)\n",
     "V_ave = torch.tensordot(torch.tensordot(V, w_true_dict['r'], dims=1), w_true_dict['l'], dims=1)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
@@ -363,7 +369,8 @@
    "source": [
     "# invert the G-system\n",
     "res_dict = g_sys.solve_inverse(I_true, I_true, auto_scaling=True, \n",
-    "                               maxiter=300, verbose=2, save_iter=10)"
+    "                               maxiter=300, verbose=2, save_iter=10,\n",
+    "                               trust_options={'xtol': 0.})  # disable early stop and finish 300 iters"
    ]
   },
   {
@@ -408,8 +415,8 @@
     "        ax[ikey].set_xlim(par_dict[key].min(), par_dict[key].max())\n",
     "        ax[ikey].set_xticks([])\n",
     "    ax[0].set_ylabel(f'iter={saved_res_dict[\"nit\"]}')\n",
-    "    ax[2].legend()\n",
-    "    plt.savefig(output_dir / f'{i}.png', bbox_inches='tight', facecolor='w')\n",
+    "    ax[2].legend(loc='upper right')\n",
+    "    plt.savefig(output_dir / f'iterations/{i}.png', bbox_inches='tight', facecolor='w')\n",
     "    plt.show()"
    ]
   },
@@ -418,6 +425,9 @@
    "id": "b97fdbae",
    "metadata": {},
    "source": [
+    "Note that the distributions of $l$ and $\\theta$ are not perfectly recovered. This is because we used `ffsas.set_torch_dtype(torch.float32)` at the very beginning. Switch to `torch.float64` to\n",
+    "recover the ground truth accurately.\n",
+    "\n",
     "Finally, plot the fitted intensity and fitting error:"
    ]
   },
@@ -442,7 +452,7 @@
     "ax[1].set_title('Fitted intensity')\n",
     "ax[1].set_xlabel(r'Scattering vector, $q_x$ ($\\AA^{-1}$)')\n",
     "# error\n",
-    "im = ax[2].imshow(torch.abs(res_dict['I'].t() - I_true.t()), \n",
+    "im = ax[2].imshow(torch.clip(torch.abs(res_dict['I'].t() - I_true.t()), min=1e-10), \n",
     "                  extent=(qx[0], qx[-1], qy[0], qy[-1]), cmap='hot',\n",
     "                  norm=colors.LogNorm(vmin=I_true.min(), vmax=I_true.max()))\n",
     "ax[2].set_title('Misfit')\n",
