--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "        # compute volume\n",
     "        if V is None:\n",
-    "            V = cls.compute_V(par_dict, const_dict)\n",
+    "            V = cls.compute_V(par_dict)\n",
     "            \n",
     "        #############\n",
     "        # Compute G #\n",
@@ -145,7 +145,7 @@
     "        return ['l', 'r', 'theta', 'phi']\n",
     "\n",
     "    @classmethod\n",
-    "    def compute_V(cls, par_dict, const_dict):\n",
+    "    def compute_V(cls, par_dict):\n",
     "        l, r = par_dict['l'], par_dict['r']\n",
     "        return math.pi * l[:, None] * r[None, :] ** 2\n",
     "\n",
@@ -306,7 +306,7 @@
     "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
     "\n",
     "# true xi\n",
-    "V = Cylinder.compute_V(par_dict, None)\n",
+    "V = Cylinder.compute_V(par_dict)\n",
     "V_ave = torch.tensordot(torch.tensordot(V, w_true_dict['r'], dims=1), w_true_dict['l'], dims=1)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
