--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -191,7 +191,7 @@
     "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
     "\n",
     "# true xi\n",
-    "V = Ellipsoid.compute_V(par_dict, None)\n",
+    "V = Ellipsoid.compute_V(par_dict)\n",
     "V_ave = torch.tensordot(torch.tensordot(V, w_true_dict['re'], dims=1), w_true_dict['rp'], dims=1)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
