--- a/examples/sphere.ipynb
+++ b/examples/sphere.ipynb
@@ -166,7 +166,7 @@
     "G = Sphere.compute_G_mini_batch([q], {'r': r}, {'drho': drho})\n",
     "\n",
     "# compute the ground truth of xi\n",
-    "V = Sphere.compute_V({'r': r}, None)\n",
+    "V = Sphere.compute_V({'r': r})\n",
     "V_ave = torch.dot(V, w_true)\n",
     "xi_true = 1e-4 * scale_true / V_ave\n",
     "\n",
