--- a/examples/sphere_PS3_data.ipynb
+++ b/examples/sphere_PS3_data.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# uncomment this line to install ffsas\n",
-    "# !pip install https://github.com/stfc-sciml/ffsas/archive/refs/heads/main.zip\n",
+    "# !pip install ffsas\n",
     "\n",
     "# ffsas\n",
     "import torch\n",
