fix minor visualisation problem in examples

--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -252,8 +252,8 @@
     "plt.subplots_adjust(hspace=.5, wspace=.3)\n",
     "ax[0, 0].plot(par_dict['l'], w_true_dict['l'], label='Truth')\n",
     "ax[0, 1].plot(par_dict['r'], w_true_dict['r'], label='Truth')\n",
-    "ax[1, 0].plot(torch.rad2deg(par_dict['theta']), w_true_dict['theta'], label='Truth')\n",
-    "ax[1, 1].plot(torch.rad2deg(par_dict['phi']), w_true_dict['phi'], label='Truth')\n",
+    "ax[1, 0].plot(par_dict['theta'], w_true_dict['theta'], label='Truth')\n",
+    "ax[1, 1].plot(par_dict['phi'], w_true_dict['phi'], label='Truth')\n",
     "ax[0, 0].set_xlabel(r'Lenght, $l$ ($\\AA$)')\n",
     "ax[0, 1].set_xlabel(r'Radius, $r$ ($\\AA$)')\n",
     "ax[1, 0].set_xlabel(r'Cylinder axis to beam angle, $\\theta$ (degree)')\n",
