--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -137,8 +137,8 @@
     "plt.subplots_adjust(hspace=.5, wspace=.3)\n",
     "ax[0, 0].plot(par_dict['rp'], w_true_dict['rp'], label='Truth')\n",
     "ax[0, 1].plot(par_dict['re'], w_true_dict['re'], label='Truth')\n",
-    "ax[1, 0].plot(torch.rad2deg(par_dict['theta']), w_true_dict['theta'], label='Truth')\n",
-    "ax[1, 1].plot(torch.rad2deg(par_dict['phi']), w_true_dict['phi'], label='Truth')\n",
+    "ax[1, 0].plot(par_dict['theta'], w_true_dict['theta'], label='Truth')\n",
+    "ax[1, 1].plot(par_dict['phi'], w_true_dict['phi'], label='Truth')\n",
     "ax[0, 0].set_xlabel(r'Polar radius, $r_p$ ($\\AA$)')\n",
     "ax[0, 1].set_xlabel(r'Equatorial radius, $r_e$ ($\\AA$)')\n",
     "ax[1, 0].set_xlabel(r'Ellipsoid axis to beam angle, $\\theta$ (degree)')\n",
