--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1bd4ccd0",
    "metadata": {},
    "source": [
     "# Exampe: cylinder as a user-defined model\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dbd827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b6902d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +63,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c75860",
    "metadata": {},
    "source": [
     "# The `cylinder` model\n",
@@ -90,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0b9c848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,16 +142,11 @@
     "    @classmethod\n",
     "    def compute_V(cls, par_dict):\n",
     "        l, r = par_dict['l'], par_dict['r']\n",
-    "        return math.pi * l[:, None] * r[None, :] ** 2\n",
-    "\n",
-    "    @classmethod\n",
-    "    def get_par_keys_V(cls):\n",
-    "        return ['l', 'r']"
+    "        return math.pi * l[:, None] * r[None, :] ** 2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb9cbab7",
    "metadata": {},
    "source": [
     "Having the `Cylinder` class defined, the remainder of this notebook looks mostly the same as [ellipsoid.ipynb](ellipsoid.ipynb). "
@@ -164,7 +154,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75df7f91",
    "metadata": {},
    "source": [
     "---"
@@ -172,7 +161,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defb4dac",
    "metadata": {},
    "source": [
     "# Ground truth\n",
@@ -188,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7739ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +205,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fd8916",
    "metadata": {},
    "source": [
     "Make the parameter distributions:"
@@ -227,7 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567aa762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +257,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f97f25",
    "metadata": {},
    "source": [
     "### Ground truth of intensity\n",
@@ -283,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb67413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +275,8 @@
     "b_true = 2.2e-4\n",
     "\n",
     "# q vectors\n",
-    "qx = torch.linspace(-.5, .5, 32)\n",
-    "qy = torch.linspace(-.75, .75, 48)\n",
+    "qx = torch.linspace(-.75, .75, 60)\n",
+    "qy = torch.linspace(-.75, .75, 60)\n",
     "\n",
     "# (SLD - SLD_solvent) ^ 2\n",
     "drho = 1.\n",
@@ -316,7 +299,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e090ec9",
    "metadata": {},
    "source": [
     "Plot the intensity truth:"
@@ -325,7 +307,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fab2f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +323,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9eb4204",
    "metadata": {},
    "source": [
     "---"
@@ -350,7 +330,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbedaa4b",
    "metadata": {},
    "source": [
     "#  Inversion\n",
@@ -361,7 +340,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab56f72f",
    "metadata": {
     "scrolled": false
    },
@@ -375,7 +353,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f100e5c",
    "metadata": {},
    "source": [
     "Plot the convergence history of the weights of $l$, $r$, $\\theta$, $\\phi$:"
@@ -384,7 +361,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8466fc",
    "metadata": {
     "scrolled": false
    },
@@ -422,7 +398,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b97fdbae",
    "metadata": {},
    "source": [
     "Note that the distributions of $l$ and $\\theta$ are not perfectly recovered. This is because we used `ffsas.set_torch_dtype(torch.float32)` at the very beginning. Switch to `torch.float64` to\n",
@@ -434,12 +409,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133179f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 3, dpi=200, figsize=(12, 4), sharex=True, sharey=True)\n",
-    "plt.subplots_adjust(wspace=-.3)\n",
+    "plt.subplots_adjust(wspace=.2)\n",
     "# truth\n",
     "cm = ax[0].imshow(I_true.t(), extent=(qx[0], qx[-1], qy[0], qy[-1]), cmap='hot',\n",
     "                  norm=colors.LogNorm(vmin=I_true.min(), vmax=I_true.max()))\n",
@@ -459,7 +433,7 @@
     "ax[2].set_xlabel(r'Scattering vector, $q_x$ ($\\AA^{-1}$)')\n",
     "\n",
     "# colorbar\n",
-    "cbar_ax = fig.add_axes([.86, 0.15, 0.02, 0.7])\n",
+    "cbar_ax = fig.add_axes([.92, 0.15, 0.02, 0.7])\n",
     "fig.colorbar(im, cax=cbar_ax)\n",
     "plt.savefig(output_dir / 'intensity_fit.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
@@ -467,7 +441,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9861e4ff",
    "metadata": {},
    "source": [
     "---"
@@ -490,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
