--- a/examples/sphere.ipynb
+++ b/examples/sphere.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b8965ae",
    "metadata": {},
    "source": [
     "# Exampe: sphere\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dbd827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,22 +22,26 @@
     "# plotting setup\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
-    "matplotlib.rcParams.update({'font.size': 12})\n",
-    "matplotlib.rcParams.update({'legend.fontsize': 11})\n",
-    "matplotlib.rcParams.update({'axes.titlesize': 12})\n",
+    "matplotlib.rcParams.update({'font.size': 22})\n",
+    "matplotlib.rcParams.update({'legend.fontsize': 20})\n",
+    "matplotlib.rcParams.update({'axes.titlesize': 22})\n",
     "matplotlib.rcParams.update({'lines.linewidth': 2})\n",
     "colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"text.latex.preamble\":  r'\\usepackage{bm,upgreek}',\n",
+    "    \"font.family\": \"sans-serif\",\n",
+    "    \"font.serif\": [\"Times\"]})\n",
     "\n",
     "# create output dir\n",
     "from pathlib import Path\n",
-    "output_dir = Path('./output/sphere')\n",
-    "Path(output_dir).mkdir(parents=True, exist_ok=True)"
+    "paper_fig_dir = Path('./output/paper_fig')\n",
+    "Path(paper_fig_dir).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c991e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defb4dac",
    "metadata": {},
    "source": [
     "# Ground truth\n",
@@ -72,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6386f48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f866c49",
    "metadata": {},
    "source": [
     "Make a radius distribution:"
@@ -110,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567aa762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f97f25",
    "metadata": {},
    "source": [
     "### Ground truth of intensity\n",
@@ -148,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca957e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +175,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd93f61a",
    "metadata": {},
    "source": [
     "Plot the ground truths:"
@@ -188,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48703df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +195,11 @@
     "ax[1].set_yscale('log')\n",
     "ax[1].set_xlabel(r'Scattering vector, $q$ ($\\AA^{-1}$)')\n",
     "ax[1].set_ylabel(r'Intensity, $I$ ($\\mathrm{cm}^{-1}$)')\n",
-    "plt.savefig(f'{output_dir}/truth.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12fc299d",
    "metadata": {},
    "source": [
     "---"
@@ -215,7 +207,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbedaa4b",
    "metadata": {},
    "source": [
     "#  Inversion\n",
@@ -226,14 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab56f72f",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# solve at five resolutions\n",
-    "resolutions = [50, 100, 200, 300, 400]\n",
+    "# solve at four resolutions\n",
+    "resolutions = [100, 200, 300, 400]\n",
     "results = []\n",
     "\n",
     "# to avoid some drifting at low resolution 50, we do not use 1.0\n",
@@ -248,9 +238,7 @@
     "    G_reso = Sphere.compute_G_mini_batch([q], {'r': r_reso}, {'drho': drho}, log_screen=False)\n",
     "    \n",
     "    # define the system\n",
-    "    g_sys_reso = SASGreensSystem(G_reso, par_keys=Sphere.get_par_keys_G(), \n",
-    "                                 log_file=output_dir / f'resolution{reso}.log', \n",
-    "                                 log_screen=False)  # log only to files, not displayed on screen\n",
+    "    g_sys_reso = SASGreensSystem(G_reso, par_keys=Sphere.get_par_keys_G())\n",
     "    \n",
     "    # solve the inverse problem using \"true\" intensity\n",
     "    # NOTE: we do not have sigma or data uncertainty, so we use mu as sigma\n",
@@ -275,7 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205b6922",
    "metadata": {},
    "source": [
     "Finally, plot the results at the different resolutions:"
@@ -284,7 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a941bf4",
    "metadata": {
     "scrolled": false
    },
@@ -293,7 +279,8 @@
     "# scaling factor to plot 1/sensitivity as uncertainty \n",
     "scaling_factor_sensitivity = 3e-6\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=len(results), ncols=2, dpi=200, figsize=(16, len(results) * 3))\n",
+    "# set up figure\n",
+    "fig, ax = plt.subplots(nrows=len(results), ncols=2, dpi=200, figsize=(18, len(results) * 3))\n",
     "plt.subplots_adjust(hspace=.3)\n",
     "if len(results) == 1:\n",
     "    ax = [ax]\n",
@@ -303,59 +290,72 @@
     "    # radius distribution #\n",
     "    #######################\n",
     "    # truth\n",
-    "    ax[i][0].scatter(r_high, w_true_high, lw=0, c=colors[0], s=30, label=r'Truth')\n",
+    "    ax[i][0].scatter(r_high, w_true_high * 100, lw=0, c=colors[0], s=30, \n",
+    "                     label=r'$w_\\mathrm{true}(r)$')\n",
     "    # inverted\n",
-    "    ax[i][0].plot(r_high, w_high, c=colors[1], label=r'MLE')\n",
-    "    dw_norm = torch.norm(w_true_high - w_high) ** 2 / len(w_high)\n",
+    "    ax[i][0].plot(r_high, w_high * 100, c=colors[1], label=r'$w_\\mathrm{fit}(r)$')\n",
+    "    dw_norm = torch.norm(w_true_high - w_high) / len(w_high)\n",
     "    # 1/sensitivity\n",
     "    sens_scaled = scaling_factor_sensitivity / sens_w_high\n",
-    "    ax[i][0].fill_between(r_high, w_high - abs(sens_scaled), w_high + abs(sens_scaled), \n",
-    "                          alpha=.3, color='gray', zorder=-100, label=r'Sens${}^{-1}$')\n",
-    "    ax[i][0].set_title(r'Res.=%d: scale=%.2f, $b$=%.3f, $|\\Delta w|^2$=%.2E' % (reso, scale, b, dw_norm))\n",
-    "    ax[i][0].set_ylim(-0.001, 0.01)\n",
-    "    ax[i][0].set_ylabel(r'Weights, $w$')\n",
+    "    ax[i][0].fill_between(r_high, (w_high - abs(sens_scaled)) * 100, (w_high + abs(sens_scaled)) * 100, \n",
+    "                          alpha=.3, color='gray', zorder=-100, label=r'${S}^{-1}(r)$')\n",
+    "    ax[i][0].set_title(r'$w_\\mathrm{fit}(r)$ res.=%d: $|\\mathbf{w}_\\mathrm{fit}-\\mathbf{w}_\\mathrm{true}|$=%.2E' % (reso, dw_norm))\n",
+    "    ax[i][0].set_ylim(-0.1, 1.2)\n",
+    "    ax[i][0].set_ylabel(r'$w$ (\\%)')\n",
+    "    ax[0][0].set_ylabel(r'Weight, $w$ (\\%)')\n",
+    "    \n",
     "    if i != len(results) - 1:\n",
     "        ax[i][0].set_xticklabels([])\n",
     "    else:\n",
-    "        ax[i][0].set_xlabel(r'Radius, $r$ ($\\AA$)')\n",
+    "        ax[i][0].set_xlabel(r'Radius, $r$ (\\AA)')\n",
+    "    ax[i][0].set_xlim(500,1000)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    #####################\n",
     "    # intensity fitting #\n",
     "    #####################\n",
-    "    chi2 = torch.norm((I_true - I) / I_true ** nu_sigma) ** 2 / len(I_true)\n",
+    "    eps_norm = torch.norm((I_true - I) / I_true ** nu_sigma) / len(I_true)\n",
     "    # truth\n",
-    "    ax[i][1].scatter(q, I_true, lw=0, c=colors[2], s=30, label=r'Truth')\n",
+    "    ax[i][1].scatter(q, I_true, lw=0, c=colors[2], s=30, label=r'$I_\\mathrm{true}(q)$')\n",
     "    # fitted\n",
-    "    ax[i][1].plot(q, I, c=colors[3], label=r'Fitted')\n",
-    "    ax[i][1].set_title(r'Res.=%d: $\\chi^2$=%.2E, wct=%.1f sec' % (reso, chi2, wct))\n",
+    "    ax[i][1].plot(q, I, c=colors[3], label=r'$I_\\mathrm{fit}(q)$')\n",
+    "    ax[i][1].set_title(r'$w_\\mathrm{fit}(r)$ res.=%d: $||\\bm{\\upepsilon}||$=%.2E, wt=%.1f sec' % (reso, eps_norm, wct))\n",
     "    ax[i][1].set_xscale('log')\n",
     "    ax[i][1].set_yscale('log')\n",
-    "    ax[i][1].set_ylabel(r'Intensity, $I$ ($\\mathrm{cm}^{-1}$)')\n",
+    "    ax[i][1].set_ylabel(r'$I$ ($\\mathrm{cm}^{-1}$)')\n",
+    "    ax[0][1].set_ylabel(r'Intensity, $I$ ($\\mathrm{cm}^{-1}$)')\n",
     "    if i != len(results) - 1:\n",
     "        ax[i][1].set_xticklabels([])\n",
     "    else:\n",
-    "        ax[i][1].set_xlabel(r'Scattering vector, $q$ ($\\AA^{-1}$)')\n",
+    "        ax[i][1].set_xlabel(r'Scattering vector, $q$ (\\AA$^{-1}$)')\n",
+    "    ax[i][1].set_yticks([1, 1e4, 1e8])\n",
+    "    ax[i][1].set_xlim(1e-3, 1)\n",
     "    \n",
     "    # add some text\n",
     "    if reso == 300:\n",
     "        ax[i][0].text(.97, .92, 'Exact', transform=ax[i][0].transAxes, \n",
-    "                     ha='right', va='top', fontsize=18, color='k')\n",
+    "                     ha='right', va='top', fontsize=22, color='k')\n",
     "        ax[i][1].text(.97, .92, 'Exact', transform=ax[i][1].transAxes, \n",
-    "                     ha='right', va='top', fontsize=18, color='k')\n",
+    "                     ha='right', va='top', fontsize=22, color='k')\n",
     "\n",
+    "# legend\n",
     "order = [1, 0, 2]\n",
     "handles, labels = ax[0][0].get_legend_handles_labels()\n",
-    "ax[0][0].legend([handles[idx] for idx in order], [labels[idx] for idx in order])\n",
+    "ax[0][0].legend([handles[idx] for idx in order], [labels[idx] for idx in order], \n",
+    "                handlelength=1, loc=[.16,.7], ncol=3, columnspacing=1.5)\n",
+    "ax[0][0].set_ylim(-0.1, 1.2)\n",
     "handles, labels = ax[0][1].get_legend_handles_labels()\n",
     "order = [1, 0]\n",
-    "ax[0][1].legend([handles[idx] for idx in order], [labels[idx] for idx in order])\n",
-    "plt.savefig(output_dir / 'results.png', bbox_inches='tight', facecolor='w')\n",
+    "ax[0][1].legend([handles[idx] for idx in order], [labels[idx] for idx in order], handlelength=1)\n",
+    "\n",
+    "# save figure for paper \n",
+    "plt.savefig(paper_fig_dir / 'sphere.pdf', bbox_inches='tight', facecolor='w', pad_inches=.1)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e51a1df8",
    "metadata": {},
    "source": [
     "---"
@@ -378,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
