--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1bd4ccd0",
    "metadata": {},
    "source": [
     "# Exampe: ellipsoid\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dbd827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +26,12 @@
     "matplotlib.rcParams.update({'font.size': 12})\n",
     "matplotlib.rcParams.update({'legend.fontsize': 11})\n",
     "matplotlib.rcParams.update({'axes.titlesize': 12})\n",
-    "matplotlib.rcParams.update({'lines.linewidth': 2})\n",
-    "\n",
-    "# create output dir\n",
-    "from pathlib import Path\n",
-    "output_dir = Path('./output/ellipsoid')\n",
-    "Path(output_dir / 'iterations').mkdir(parents=True, exist_ok=True)"
+    "matplotlib.rcParams.update({'lines.linewidth': 2})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b6902d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defb4dac",
    "metadata": {},
    "source": [
     "# Ground truth\n",
@@ -73,7 +64,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7739ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fd8916",
    "metadata": {},
    "source": [
     "Make the parameter distributions:"
@@ -112,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567aa762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +135,6 @@
     "ax[0, 1].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 0].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 1].set_ylabel(r'Weights, $w$')\n",
-    "plt.savefig(output_dir / 'true_weights.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()\n",
     "\n",
     "# degree to radian\n",
@@ -157,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f97f25",
    "metadata": {},
    "source": [
     "### Ground truth of intensity\n",
@@ -168,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb67413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +172,7 @@
     "G = Ellipsoid.compute_G_mini_batch([qx, qy],  par_dict, {'drho': drho}, batch_size=8, device=device)\n",
     "\n",
     "# define the G-based SAS system\n",
-    "g_sys = SASGreensSystem(G, Ellipsoid.get_par_keys_G(), batch_size=8, device=device, \n",
-    "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
+    "g_sys = SASGreensSystem(G, Ellipsoid.get_par_keys_G(), batch_size=8, device=device)\n",
     "\n",
     "# true xi\n",
     "V = Ellipsoid.compute_V(par_dict)\n",
@@ -201,7 +185,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e090ec9",
    "metadata": {},
    "source": [
     "Plot the intensity truth:"
@@ -210,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fab2f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,13 +203,11 @@
     "plt.xlabel(r'Scattering vector, $q_x$ ($\\AA^{-1}$)')\n",
     "plt.ylabel(r'Scattering vector, $q_y$ ($\\AA^{-1}$)')\n",
     "plt.colorbar()\n",
-    "plt.savefig(output_dir / 'true_intensity.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9eb4204",
    "metadata": {},
    "source": [
     "---"
@@ -235,7 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbedaa4b",
    "metadata": {},
    "source": [
     "#  Inversion\n",
@@ -246,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab56f72f",
    "metadata": {
     "scrolled": false
    },
@@ -259,7 +237,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f100e5c",
    "metadata": {},
    "source": [
     "Plot the convergence history of the weights of $r_p$, $r_e$, $\\theta$, $\\phi$:"
@@ -268,7 +245,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8466fc",
    "metadata": {
     "scrolled": false
    },
@@ -300,13 +276,11 @@
     "        ax[ikey].set_xticks([])\n",
     "    ax[0].set_ylabel(f'iter={saved_res_dict[\"nit\"]}')\n",
     "    ax[2].legend(loc='upper right')\n",
-    "    plt.savefig(output_dir / f'iterations/{i}.png', bbox_inches='tight', facecolor='w')\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b97fdbae",
    "metadata": {},
    "source": [
     "Finally, plot the fitted intensity and misfit:"
@@ -315,7 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133179f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,13 +315,11 @@
     "# colorbar\n",
     "cbar_ax = fig.add_axes([.92, 0.15, 0.02, 0.7])\n",
     "fig.colorbar(im, cax=cbar_ax)\n",
-    "plt.savefig(output_dir / 'intensity_fit.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9861e4ff",
    "metadata": {},
    "source": [
     "---"
@@ -371,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
