--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -26,12 +26,7 @@
     "matplotlib.rcParams.update({'font.size': 12})\n",
     "matplotlib.rcParams.update({'legend.fontsize': 11})\n",
     "matplotlib.rcParams.update({'axes.titlesize': 12})\n",
-    "matplotlib.rcParams.update({'lines.linewidth': 2})\n",
-    "\n",
-    "# create output dir\n",
-    "from pathlib import Path\n",
-    "output_dir = Path('./output/cylinder')\n",
-    "Path(output_dir / 'iterations').mkdir(parents=True, exist_ok=True)"
+    "matplotlib.rcParams.update({'lines.linewidth': 2})"
    ]
   },
   {
@@ -247,7 +242,6 @@
     "ax[0, 1].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 0].set_ylabel(r'Weights, $w$')\n",
     "ax[1, 1].set_ylabel(r'Weights, $w$')\n",
-    "plt.savefig(output_dir / 'true_weights.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()\n",
     "\n",
     "# degree to radian\n",
@@ -285,8 +279,7 @@
     "G = Cylinder.compute_G_mini_batch([qx, qy],  par_dict, {'drho': drho}, batch_size=8, device=device)\n",
     "\n",
     "# define the G-based SAS system\n",
-    "g_sys = SASGreensSystem(G, Cylinder.get_par_keys_G(), batch_size=8, device=device, \n",
-    "                        log_file=output_dir / 'GSys.log', log_screen=True)\n",
+    "g_sys = SASGreensSystem(G, Cylinder.get_par_keys_G(), batch_size=8, device=device)\n",
     "\n",
     "# true xi\n",
     "V = Cylinder.compute_V(par_dict)\n",
@@ -317,7 +310,6 @@
     "plt.xlabel(r'Scattering vector, $qx$ ($\\AA^{-1}$)')\n",
     "plt.ylabel(r'Scattering vector, $qy$ ($\\AA^{-1}$)')\n",
     "plt.colorbar()\n",
-    "plt.savefig(output_dir / 'true_intensity.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
    ]
   },
@@ -392,7 +384,6 @@
     "        ax[ikey].set_xticks([])\n",
     "    ax[0].set_ylabel(f'iter={saved_res_dict[\"nit\"]}')\n",
     "    ax[2].legend(loc='upper right')\n",
-    "    plt.savefig(output_dir / f'iterations/{i}.png', bbox_inches='tight', facecolor='w')\n",
     "    plt.show()"
    ]
   },
@@ -435,7 +426,6 @@
     "# colorbar\n",
     "cbar_ax = fig.add_axes([.92, 0.15, 0.02, 0.7])\n",
     "fig.colorbar(im, cax=cbar_ax)\n",
-    "plt.savefig(output_dir / 'intensity_fit.png', bbox_inches='tight', facecolor='w')\n",
     "plt.show()"
    ]
   },
